[package]
name = "advent_of_code_2019"
version = "0.1.0"
authors = ["Jani Suihko <janigbg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
permutohedron = "0.2.4"
crossbeam-channel = "0.4.0"
image = "0.22.3"
num = "0.2.0"
